--- a/success.html
+++ b/success.html
@@ -16,9 +16,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet"> 
     
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-
     <script> 
         tailwind.config = { 
             theme: { 
@@ -41,14 +38,22 @@
             } 
         } 
     </script> 
+    <style>
+        /* Custom Grid Background */
+        .bg-grid {
+            background-size: 40px 40px;
+            background-image: linear-gradient(to right, rgba(255, 255, 255, 0.05) 1px, transparent 1px),
+                              linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+        }
+    </style>
 </head> 
-<body class="antialiased bg-grid h-screen flex flex-col items-center justify-center text-center px-4"> 
+<body class="antialiased bg-reyes-black text-reyes-text bg-grid h-screen flex flex-col items-center justify-center text-center px-4"> 
  
     <div class="max-w-2xl mx-auto">
         <div class="mb-8">
             <i class="fa-solid fa-circle-check text-6xl text-reyes-gold mb-4 animate-bounce"></i>
             <h1 class="text-4xl md:text-5xl font-extrabold text-white mb-4">
-                Mensaje <span class="gradient-cyan">Recibido</span>.
+                Mensaje <span class="bg-gradient-to-r from-reyes-cyan to-[#0080FF] bg-clip-text text-transparent">Recibido</span>.
             </h1>
             <p class="text-xl text-gray-400 mb-8 font-light">
                 Nuestros auditores están revisando tu solicitud. Te contactaremos en menos de 24 horas.
